Added 2 links to the HTML files  about the doctors inside the header UL

--- a/website/accueil.html
+++ b/website/accueil.html
@@ -19,8 +19,8 @@
             <ul>
                 <li>Accueil</li>
                 <li>À propos</li>
-                <li>Docteur Carpentier</li>
-                <li>Docteur Strauss</li>
+            <a href="drcarp.html"><li> <button> Docteur Carpentier</button></li> </a>
+            <a href="drstrauss.html"><li> <button> Docteur Strauss</button></li> </a>
                 <li>Contact</li>
                 <li>Horaires</li>
                 <li>Urgence</li>
