The entire UL options inside the header are linked to their respective HTML file

--- a/website/accueil.html
+++ b/website/accueil.html
@@ -17,13 +17,13 @@
         </figure>
         <nav class="navigation">
             <ul>
-                <li>Accueil</li>
-                <li>À propos</li>
-            <a href="drcarp.html"><li> <button> Docteur Carpentier</button></li> </a>
-            <a href="drstrauss.html"><li> <button> Docteur Strauss</button></li> </a>
-                <li>Contact</li>
-                <li>Horaires</li>
-                <li>Urgence</li>
+            <a href="accueil.html"> <li><button>Accueil</button></li> </a>
+            <a href="apropos.html"> <li><button>À propos</button></li> </a>
+            <a href="drcarp.html"><li><button>Docteur Carpentier</button></li> </a>
+            <a href="drstrauss.html"><li> <button>Docteur Strauss</button></li> </a>
+            <a href="contact.html"><li><button>Contact</button></li> </a>
+            <a href="horaires.html"><li><button>Horaires</button></li> </a>
+            <a href="urgence.html"><li><button>Urgence</button></li> </a>
             </ul>
         </nav>
     </head>
