added a class to the li inside the UL insde the header

--- a/website/accueil.html
+++ b/website/accueil.html
@@ -16,14 +16,14 @@
             <img class="logodesktop" src="images/logodesktop.jpg" alt="logo-chirurgie"></img>
         </figure>
         <nav class="navigation">
-            <ul>
-            <a href="accueil.html"> <li><button>Accueil</button></li> </a>
-            <a href="apropos.html"> <li><button>À propos</button></li> </a>
-            <a href="drcarp.html"><li><button>Docteur Carpentier</button></li> </a>
-            <a href="drstrauss.html"><li> <button>Docteur Strauss</button></li> </a>
-            <a href="contact.html"><li><button>Contact</button></li> </a>
-            <a href="horaires.html"><li><button>Horaires</button></li> </a>
-            <a href="urgence.html"><li><button>Urgence</button></li> </a>
+            <ul class="menu">
+            <a class="liaccueil" href="accueil.html"> <li><button>Accueil</button></li> </a>
+            <a class="liapropos" href="apropos.html"> <li><button>À propos</button></li> </a>
+            <a class="lidrcarp" href="drcarp.html"><li><button>Docteur Carpentier</button></li> </a>
+            <a class="lidrstrauss" href="drstrauss.html"><li> <button>Docteur Strauss</button></li> </a>
+            <a class="licontact" href="contact.html"><li><button>Contact</button></li> </a>
+            <a class="lihoraires" href="horaires.html"><li><button>Horaires</button></li> </a>
+            <a class="liurgence" href="urgence.html"><li><button>Urgence</button></li> </a>
             </ul>
         </nav>
     </head>
