--- a/website/horaires.html
+++ b/website/horaires.html
@@ -4,10 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <style>
+            @import url('https://fonts.googleapis.com/css?family=Dancing+Script|Exo+2|Josefin+Sans&display=swap');
+    </style>
     <title>Horaires</title>
 </head>
 <body>
-    <h1>Horaires</h1>
+        <head class="head">
+                <figure class="logo">
+                    <img class="logodesktop" src="images/logodesktop.jpg" alt="logo-chirurgie"></img>
+                </figure>
+                <nav class="navigation">
+                    <ul class="menu">
+                    <a class="liaccueil" href="accueil.html"> <li>Accueil</li> </a>
+                    <a class="liapropos" href="apropos.html"> <li>À propos</li> </a>
+                    <a class="lidrcarp" href="drcarp.html"><li>Dr Carpentier</li> </a>
+                    <a class="lidrstrauss" href="drstrauss.html"><li> Dr Strauss</li> </a>
+                    <a class="licontact" href="contact.html"><li>Contact</li> </a>
+                    <a class="lihoraires" href="horaires.html"><li>Horaires</li> </a>
+                    <a class="liurgence" href="urgences.html"><li>Urgence</li> </a>
+                    </ul>
+                </nav>
+            </head>
+<main class="main">
+        <figure class="banner">
+        <img class="bannerdesktop" src="images/bannerdesktop.png" alt="banner-chirurgie"> </img>
+        </figure>
+        <h1 class="horairesh1">Les horaires pour nous contacter</h1>
+            <h3 class="horairescarpentier">Horaires du docteur Carpentier</h3>
+                <p class="horairescarptext">Du lundi au vendredi, de 8h30 à 18h, le samedi de 9h à 12h</p>
+            <h3 class="horairesstrauss">Horaires du docteur Strauss</h3>
+                <p class="horairesstrausstext">Du lundi au vendredi, de 10h à 11h</p>
+            <h3 class="horairessecretariat">Horaires secrétariat</h3>
+                <p class="horairessecretariattext">Du lundi au vendredi de 8h à 19h, le samedi de 8h à 13h30</p>
+</main>
+
+<footer class="footer">
+        <img class="footercarp" src="images/doge.jpeg" alt="docteur-carpentier">
+        <a href="drcarp.html"><button>Docteur Carpentier</button> </a>
+        <img class="footerstrauss" src="images/dogelaptop.png" alt="docteur-strauss">
+        <a href="drstrauss.html"><button>Docteur Strauss</button> </a>
+        <p class="footerinfos">0943462499, cabinet-magnifique*at*gmail.com, 11 avenue du pognon 93000 Paris</p>
+</footer>
     
 </body>
 </html>
