--- a/website/accueil.html
+++ b/website/accueil.html
@@ -5,47 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <style>
+            @import url('https://fonts.googleapis.com/css?family=Dancing+Script|Exo+2|Josefin+Sans&display=swap');
+    </style>
     <title>Chirurgie esthétique</title>
 </head>
 
 
 
 <body>
-    <head class="head">
-        <figure class="logo">
-            <img class="logodesktop" src="images/logodesktop.jpg" alt="logo-chirurgie"></img>
-        </figure>
-        <nav class="navigation">
-            <ul class="menu">
-            <a class="liaccueil" href="accueil.html"> <li><button>Accueil</button></li> </a>
-            <a class="liapropos" href="apropos.html"> <li><button>À propos</button></li> </a>
-            <a class="lidrcarp" href="drcarp.html"><li><button>Docteur Carpentier</button></li> </a>
-            <a class="lidrstrauss" href="drstrauss.html"><li> <button>Docteur Strauss</button></li> </a>
-            <a class="licontact" href="contact.html"><li><button>Contact</button></li> </a>
-            <a class="lihoraires" href="horaires.html"><li><button>Horaires</button></li> </a>
-            <a class="liurgence" href="urgence.html"><li><button>Urgence</button></li> </a>
-            </ul>
-        </nav>
-    </head>
+    <div class="all">
+        <header class="head">
+            <figure class="logo">
+                <img class="logodesktop" src="images/logodesktop.jpg" width="300vw" alt="logo-chirurgie"></img>
+            </figure>
+            <nav class="navigation">
+                <ul class="menu">
+                <a class="liaccueil" href="accueil.html"> <li>Accueil</li> </a>
+                <a class="liapropos" href="apropos.html"> <li>À propos</li> </a>
+                <a class="lidrcarp" href="drcarp.html"><li>Dr Carpentier</li> </a>
+                <a class="lidrstrauss" href="drstrauss.html"><li> Dr Strauss</li> </a>
+                <a class="licontact" href="contact.html"><li>Contact</li> </a>
+                <a class="lihoraires" href="horaires.html"><li>Horaires</li> </a>
+                <a class="liurgence" href="urgences.html"><li>Urgence</li> </a>
+                </ul>
+            </nav>
+        </header>
 
-    <main class="main">
-        <figure class="banner">
-            <img class="bannerdesktop" src="images/bannerdesktop.png" alt="banner-chirurgie"> </img>
-        </figure>
-        <p>
-            blablablablablablablablablablab
-            blablablablablablablablablablablablablablablabla
-            blablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablabla
-            blablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablabla
-            blablablablablablablablablablablablablablablablablablablablablablablabla
-        </p>
-    </main>
+        <main class="main">
+            <figure class="banner">
+                <img class="bannerdesktop" src="images/bannerdesktop.png" alt="banner-chirurgie"> </img>
+            </figure>
+            <h2 class="accueilh2">Le cabinet magnifique vous souhaite la bienvenue</h2>
+            <p>
+                blablablablablablablablablablab
+                blablablablablablablablablablablablablablablabla
+                blablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablabla
+                blablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablabla
+                blablablablablablablablablablablablablablablablablablablablablablablabla
+            </p>
+        </main>
 
-    <footer class="footer">
-       <a href="drcarp.html"><button>Docteur Carpentier</button> </a>
-       <a href="drstrauss.html"><button>Docteur Strauss</button> </a>
-    </footer>
-
+        <footer class="footer">
+            <img class="footercarp" src="images/doge.jpeg" width="200vw" alt="docteur-carpentier">
+            <a href="drcarplink"><button>Docteur Carpentier</button> </a>
+            <img class="footerstrauss" src="images/dogelaptop.png" alt="docteur-strauss">
+            <a href="drstrausslink"><button>Docteur Strauss</button> </a>
+            <p class="footerinfos">0943462499, cabinet-magnifique*at*gmail.com, 11 avenue du pognon 93000 Paris</p>
+        </footer>
+    </div>
     
 </body>
 </html>
