--- a/website/drstrauss.html
+++ b/website/drstrauss.html
@@ -4,10 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <style>
+                @import url('https://fonts.googleapis.com/css?family=Dancing+Script|Exo+2|Josefin+Sans&display=swap');
+    </style> 
     <title>Docteur Strauss</title>
 </head>
 <body>
-    <h1>SALUT</h1>
+        <head class="head">
+                <figure class="logo">
+                    <img class="logodesktop" src="images/logodesktop.jpg" alt="logo-chirurgie"></img>
+                </figure>
+                <nav class="navigation">
+                    <ul class="menu">
+                    <a class="liaccueil" href="accueil.html"> <li>Accueil</li> </a>
+                    <a class="liapropos" href="apropos.html"> <li>À propos</li> </a>
+                    <a class="lidrcarp" href="drcarp.html"><li>Dr Carpentier</li> </a>
+                    <a class="lidrstrauss" href="drstrauss.html"><li> Dr Strauss</li> </a>
+                    <a class="licontact" href="contact.html"><li>Contact</li> </a>
+                    <a class="lihoraires" href="horaires.html"><li>Horaires</li> </a>
+                    <a class="liurgence" href="urgences.html"><li>Urgence</li> </a>
+                    </ul>
+                </nav>
+        </head>
+    
+        <main class="main">
+                <figure class="banner">
+                    <img class="bannerdesktop" src="images/bannerdesktop.png" alt="banner-chirurgie"> </img>
+                </figure>
+                <img class="photostraussbio" src="images/dogelaptop.png" alt="biographiestrauss"></img>
+                <h3 class="straussh3">Docteur Strauss</h3>
+                <p class="biostrauss">wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww
+                        wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww
+                        wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww
+                        wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww
+                </p>
+        </main>
+        <footer class="footer">
+                <img class="strausstocarp" src="images/doge.jpeg"></img>
+                <a href="drcarp.html"><button>Docteur Carpentier</button> </a>
+                <p class="footerinfos">0943462499, cabinet-magnifique*at*gmail.com, 11 avenue du pognon 93000 Paris</p>
+        </footer>
     
 </body>
 </html>
