Renamed all 'accueil.html' in html files into 'index.html'

--- a/website/drcarp.html
+++ b/website/drcarp.html
@@ -23,7 +23,7 @@
             
             
             <ul class="menu">
-                  <li><a href="accueil.html">Accueil</a></li>
+                  <li><a href="index.html">Accueil</a></li>
                   <li><a href="apropos.html">À propos</a></li>
                   <li><a href="drcarp.html">Dr Carpentier</a></li>
                   <li><a href="drstrauss.html">Dr Strauss</a></li>
@@ -39,7 +39,7 @@
             </figure>
             <nav class="navigation">
                 <ul class="menu">
-                <a class="liaccueil" href="accueil.html"> <li>Accueil</li> </a>
+                <a class="liaccueil" href="index.html"> <li>Accueil</li> </a>
                 <a class="liapropos" href="apropos.html"> <li>À propos</li> </a>
                 <a class="lidrcarp" href="drcarp.html"><li>Dr Carpentier</li> </a>
                 <a class="lidrstrauss" href="drstrauss.html"><li> Dr Strauss</li> </a>
