modified media queries (hamburger and nav display) modified the footer of drstrauss

--- a/drstrauss.html
+++ b/drstrauss.html
@@ -60,9 +60,10 @@
                 <p class="biostrauss">Ardore efferebantur viribus fames saeviore rabie concepta ardore fames viribus incohibili Seleuciae in incohibili viribus induratae in tresque viribus excidium excidium sudoribus concepta quam ardore induratae Castricius incendebat quam excidium et efferebantur legiones ardore excidium Seleuciae concepta incendebat efferebantur efferebantur amplificatis tuebatur excidium desperatio efferebantur incohibili matris in excidium legiones tuebatur et induratae bellicis saeviore amplificatis efferebantur tresque desperatio matris ardore Seleuciae excidium ardore saeviore incendebat ardore matris quam Castricius amplificatis ardore amplificatis fames in tuebatur viribus sudoribus legiones Seleuciae tresque tresque viribus tresque et viribus rabie desperatio viribus amplificatis efferebantur incohibili induratae viribus saeviore sudoribus fames saeviore viribus viribus.
                 </p>
         </main>
+
         <footer class="footer">
-                <a class="liencarp" href="drcarp.html">
-                    <img class="strausstocarp" src="images/doge.jpeg" alt="image-strauss">
+                <a id="liencarp" href="drcarp.html">
+                    <img id="strausstocarp" src="images/doge.jpeg" alt="image-strauss">
                 </a>
                 <a href="drcarp.html">Docteur Carpentier </a>
                 <p class="footerinfos"><a class="numerofooter" href="tel:0943462499" alt="téléphone-secrétariat">0943462499</a>, cabinet-magnifique*at*gmail.com, 11 avenue du pognon 93000 Paris</p>
